[project]
name = "windsurf-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Gasch",email = "eldie1984@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "arviz[matplotlib,zarr] (>=0.8.0,<1)",
    "bambi (>=0.17.2,<0.18.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false